--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.2.0
   google_sign_in: ^5.3.0
   provider: ^6.0.4
+  image_picker: ^0.8.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
